<resources>
    <string name="app_name">S-APP</string>

    <!-- Login strings -->
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp"> Sign Up</string>
    <string name="or">OR</string>
    <string name="user">User</string>

    <!-- Logout strings -->
    <string name="logout">Logout</string>
    <string name="logout_question">Do you want to logout?</string>

    <!-- SignUp strings -->
    <string name="firstName">First Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Navigation Bar -->
    <string name="news">News</string>
    <string name="calendar">Calendar</string>
    <string name="forum">Forum</string>

    <!-- Logo -->
    <string name="logo">Logo</string>

    <!-- Add Article -->
    <string name="add_article">Add Article</string>
    <string name="title_activity_add_article">AddArticleActivity</string>
    <string name="add_image">Image</string>
    <string name="add_text">Text</string>
    <string name="add_link">Link</string>
    <string name="title">Title</string>
    <string name="article_post">POST</string>

    <!-- Post -->
    <string name="post_title">Post title</string>
    <string name="post_posted_by">Posted by</string>
    <string name="post_date">Post Date</string>
    <string name="post_comments">Post Comments</string>
    <string name="post_add_comment">Add new comment &#8230;</string>
    <string name="post_comment_username">Comment Username</string>
    <string name="post_comment_date">Comment Date</string>
    <string name="post_comment">Comment</string>
    <string name="post_zero_comments">0</string>

    <!-- Image Post -->
    <string name="image_post">Image post</string>
    <string name="image_post_description">Your Image description (optional)</string>
    <string name="image_post_item_title">Image Title</string>
    <string name="image_post_item_description">Image Description</string>

    <!-- Text Post -->
    <string name="text_post">Text post</string>
    <string name="text_post_description">Your text post</string>
    <string name="text_post_item_title">Text Title</string>
    <string name="text_post_item_text_content">Text Content</string>

    <!-- Link Post -->
    <string name="link_post">Link post</string>
    <string name="link_content">http://</string>
    <string name="link_post_description">Link description</string>
    <string name="link_post_url">Url</string>
    <string name="link_post_title">Link Title</string>

    <!-- Discard Post -->
    <string name="discard_image_post_message">Discard post submission?</string>
    <string name="discard_cancel">@android:string/cancel</string>
    <string name="discard_approve">DISCARD</string>

    <!-- News Menu -->
    <string name="manage_news_feed">Manage your News feed</string>

    <!-- Calendar -->
    <string name="sneaker_model">Sneaker Model</string>
    <string name="sneaker_brand">Sneaker Brand</string>
    <string name="nothing_found">No Sneaker releases for the selected date found</string>
    <string name="sneaker_add_to_calendar">Add sneaker release to calendar</string>

    <!-- News -->
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="news_image">News Image</string>
    <string name="news_url">News URL</string>
    <string name="news_manage_rss_feed">Your RSS Feed Subscriptions</string>
    <string name="news_sole_collector">Sole Collector</string>
    <string name="news_nice_kicks">Nice Kicks</string>
    <string name="news_finish_line">Finish Line</string>
    <string name="news_sneaker_freaker">Sneaker Freaker</string>
    <string name="news_sneaker_files">Sneaker Files</string>
    <string name="news_modern_notoriety">Modern Notoriety</string>
    <string name="news_no_subscription">
        It looks like, you haven\t subscribed to any RSS Feed yet.
        Try to add some Feeds through the Toolbar at the top!
    </string>

</resources>
