<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgColor"
    android:padding="8dp"
    android:layout_marginBottom="5dp">

    <TextView
        android:id="@+id/link_post_posted_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12sp"
        android:textColor="@color/colorSecondaryLight"
        android:text="@string/post_posted_by"/>

    <TextView
        android:id="@+id/post_id"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/link_post_date"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/link_post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="12sp"
        android:textColor="@color/colorSecondaryLight"
        android:text="@string/post_date"/>

    <TextView
        android:id="@+id/link_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/link_post_posted_by"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:text="@string/link_post_title"/>

    <TextView
        android:id="@+id/link_post_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/link_post_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/link_post_url"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/link_post_url"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/link_post_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/link_post"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_action_add_link"/>

        <TextView
            android:id="@+id/link_post_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/link_post_title"
            app:layout_constraintLeft_toRightOf="@+id/link_post_image"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:gravity="fill"
            android:layout_marginStart="10dp"
            android:text="@string/link_post_description"/>

    </LinearLayout>

    <TextView
        android:id="@+id/link_post_comment_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorSecondaryLight"
        android:drawableStart="@drawable/ic_comment_white"
        android:drawablePadding="4dp"
        android:text="@string/post_zero_comments"/>

</android.support.constraint.ConstraintLayout>