<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".Login">

    <ImageView
        android:layout_width="407dp"
        android:layout_height="407dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@mipmap/sapp_logo" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/textColor"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:inputType="textEmailAddress"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/password"
        android:textColor="@color/textColor"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:inputType="textPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:text="@string/login"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/or"
        android:layout_gravity="center"
        android:textColor="@color/textColor"
        android:onClick="onLogin"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:text="@string/signUp"
        android:layout_marginTop="5dp"
        android:onClick="onSignUp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>



</LinearLayout>