<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/bgColor"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:backgroundTint="@color/colorSecondaryLight"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:backgroundTint="@color/colorSecondaryLight"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:backgroundTint="@color/colorSecondaryLight"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:backgroundTint="@color/colorSecondaryLight"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:backgroundTint="@color/colorSecondaryLight"
        android:inputType="textPassword"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPassword"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:backgroundTint="@color/colorSecondaryLight"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:layout_marginTop="15dp"
        android:onClick="onSignUp"/>

</LinearLayout>