<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgColor"
    android:padding="8dp"
    android:layout_marginBottom="5dp">

    <TextView
        android:id="@+id/text_post_posted_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12sp"
        android:textColor="@color/colorSecondaryLight"
        android:text="@string/post_posted_by"/>

    <TextView
        android:id="@+id/text_post_id"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_post_date"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="12sp"
        android:textColor="@color/colorSecondaryLight"
        android:text="@string/post_date"/>

    <TextView
        android:id="@+id/text_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_post_posted_by"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:text="@string/text_post_item_title"/>

    <TextView
        android:id="@+id/text_post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_post_title"
        android:textSize="14sp"
        android:textColor="@color/textColor"
        android:text="@string/text_post_item_text_content"/>

</android.support.constraint.ConstraintLayout>