<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    android:background="@color/bgColorLight">

    <TextView
        android:id="@+id/comment_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorSecondary"
        android:text="@string/post_comment_username"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/comment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorSecondary"
        android:text="@string/post_comment_date"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/comment_user"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/post_comment"/>

</android.support.constraint.ConstraintLayout>