<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageRssFeed"
    android:background="@color/bgColorLight"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/manage_rss_feed_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/bgColor"
        android:background="@color/bgColorNav"
        app:title="@string/news_manage_rss_feed"/>

    <CheckedTextView
        android:id="@+id/check_sole_collector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/news_sole_collector"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onCheckboxChange"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <CheckedTextView
        android:id="@+id/check_nice_kicks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/news_nice_kicks"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onCheckboxChange"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <CheckedTextView
        android:id="@+id/check_finish_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/news_finish_line"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onCheckboxChange"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <CheckedTextView
        android:id="@+id/check_sneaker_freaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/news_sneaker_freaker"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onCheckboxChange"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <CheckedTextView
        android:id="@+id/check_sneaker_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/news_sneaker_files"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onCheckboxChange"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <CheckedTextView
        android:id="@+id/check_modern_notoriety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/news_modern_notoriety"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onCheckboxChange"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>







</LinearLayout>