<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgColor"
    android:padding="8dp"
    android:layout_marginBottom="5dp">

    <TextView
        android:id="@+id/image_post_posted_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="12sp"
        android:textColor="@color/colorSecondaryLight"
        android:text="@string/post_posted_by"/>

    <TextView
        android:id="@+id/post_id"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/image_post_date"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/image_post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="12sp"
        android:textColor="@color/colorSecondaryLight"
        android:text="@string/post_date"/>

    <TextView
        android:id="@+id/image_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_post_posted_by"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_post_title"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_post_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/image_post_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/image_post"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/image_post_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/image_post_title"
            app:layout_constraintLeft_toRightOf="@+id/image_post_image"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:gravity="fill"
            android:text="@string/image_post_item_description"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>