<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostComments"
    android:background="@color/bgColor"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_post_comments"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bgColor"
        app:titleTextColor="@color/textColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/post_comments"/>

    <ImageView
        android:id="@+id/user_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_post_comments"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_person"
        android:contentDescription="@string/user"/>

    <TextView
        android:id="@+id/post_comments_posted_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_post_comments"
        app:layout_constraintLeft_toRightOf="@id/user_logo"
        android:text="@string/post_posted_by"
        android:layout_marginTop="2dp"
        android:layout_marginStart="3dp"/>

    <TextView
        android:id="@+id/post_comments_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_post_comments"
        app:layout_constraintLeft_toRightOf="@id/post_comments_posted_by"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/post_comments_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_post_comments"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="2dp"
        android:text="@string/post_date"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/post_comments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:text="@string/post_title"/>


    <!-- PLACEHOLDER FOR CONTENT FRAGMENTS
            ALTERNATES FOR EVERY POST TYPE (IMAGE, TEXT, LINK) -->
    <LinearLayout
        android:id="@+id/post_comments_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_comments_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

    </LinearLayout>

    <!-- NEW COMMENT SECTION -->
    <LinearLayout
        android:id="@+id/new_comment_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_comments_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_rounded_edittext_white"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/post_new_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/post_add_comment"
            android:inputType="textCapSentences"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />

        <ImageButton
            android:id="@+id/new_comment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mode_comment_grey"
            android:background="@color/bgColorLight"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/post_add_comment"
            android:onClick="onCommentPost" />

    </LinearLayout>

    <!-- COMMENTS OF THE POST IN A RECYCLER VIEW -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_post_comments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/new_comment_section"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>